Added button names to wireframe

--- a/source/main_page/index.html
+++ b/source/main_page/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stonks Chore Tracker</title>
-
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stonks Chore Tracker</title>
+  </head>
+  
+ <body>
     <header>
-        <div>
-            <p>Chore List</p>
-        </div>
-        <button type="menu" id="drop-down">
-
-        </button>
+      <h2>Chore List</h2>
+      <button type="menu" id="drop-down">Menu</button>
     </header>
+  
     <main>
-        <section id="chore-cards"></section>
+      <section id="chore-cards">
+      </section>
     </main>
+  
     <footer>
-        <button type="button" id="add-chore"></button>
+      <button type="button" id="add-chore">Add Chore</button>
     </footer>
-</body>
+   
+  </body>
 </html>
