--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -9,7 +9,7 @@
       <h3>chore name</h3>
     </p>
     <p class="date">
-      <h4>Due date</h
+    <h4>Due date</h4>
     </p>
     <div class="sections">
       <h4>section</h4>
