--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -11,8 +11,8 @@
     <p class="date">
     <h4>Due date</h4>
     </p>
-    <div class="sections">
-      <h4>section</h4>
+    <div class="sect
+      <h4>section</h
     </div>
     <img id='checkbox' src="path for checkbox image"
       alt="checkbox">
