--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -6,12 +6,11 @@
     <img id='assignee' src="path for assignee stickers"
       alt="assignee">
     <p class="Name">
-      <h3>chore name</h3>
-    </p>
-    <p class="date">
+      <h3>chore name</h3></p>
+    <p> class="date">
     <h4>Due date</h4>
     </p>
-    <div class="sect
+    <div class="section"
       <h4>section</h
     </div>
     <img id='checkbox' src="path for checkbox image"
