--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -11,7 +11,7 @@
     <h4>Due date</h4>
     </p>
     <div class="section"
-      <h4>section</h
+         <h4>section</h>
     </div>
     <img id='checkbox' src="path for checkbox image"
       alt="checkbox">
