--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -6,14 +6,14 @@
     <img id='assignee' src="path for assignee stickers"
       alt="assignee">
     <p class="Name">
-      <h3>chore name</h3></p>
-    <p> class="date">
-    <h4>Due date</h4>
+      <h3>chore name</h3>
     </p>
-    <div class="section"
-         <h4>section</h>
+    <p class="date">
+      <h4>Due date</h4>
+    </p>
+    <div class="sections">
+      <h4>section</h4>
     </div>
     <img id='checkbox' src="path for checkbox image"
       alt="checkbox">
 </article>
-
