Begin fixing linting issues

--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -1,20 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
 <!--This is the template as a referece for making an individual chore card. -->
 <!--use grid for arrangment: assignee in first column; chorename, due data, and section in second column;
     check box in the third column. May turn the bar into a progression bar-->
 <!--template literal will be used to configured each individual chore card.-->
-<article>
-    <img id='assignee' src="path for assignee stickers"
-      alt="assignee">
-    <p class="Name">
-      <h3>chore name</h3>
-    </p>
-    <p class="date">
-      <h4>Due date</h4>
-    </p>
-    <div class="sections">
-      <h4>section</h4>
-    </div>
-    <img id='checkbox' src="path for checkbox image"
-      alt="checkbox">
-</article>
+  <article>
+      <img id="assignee" src="path for assignee stickers"
+        alt="assignee">
+      <p class="name">
+        <h3>chore name</h3>
+      </p>
+      <p class="date">
+        <h4>Due date</h4>
+      </p>
+      <div class="sections">
+        <h4>section</h4>
+      </div>
+      <img id="checkbox" src="path for checkbox image"
+        alt="checkbox">
+  </article>
+</html>
 
