Change for index.html to add the menu button

--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -13,7 +13,7 @@
   <article id="card">
     <div class="grid-container">
       <div class="item1">
-        <img id='assignee' src="assignee_img.jpg"
+        <img id='assignee' src="../chore_card/assignee_img.jpg"
           alt="assignee">
         <!--<i class="fa-solid fa-user-ninja" id="assignee"></i>-->
       </div>
