Tested chore card layout and icons

--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -27,8 +27,8 @@
         <span id="label">Bedroom</span>
       </div>
       <div class="item5">
-        <i class="fa-regular fa-square" id="checkbox"></i>
-        <!--<i class="fa-regular fa-square-check" id="checkbox"></i>-->
+        <!--<i class="fa-regular fa-square" id="checkbox"></i>-->
+        <i class="fa-regular fa-square-check" id="checkbox"></i>
       </div>
     </div>
   </article>
