Added template file reads to chore_card.js

--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -4,32 +4,33 @@
 <!--use grid for arrangment: assignee in first column; chorename, due data, and section in second column;
     check box in the third column. May turn the bar into a progression bar-->
 <!--template literal will be used to configured each individual chore card.-->
-
-<head>
-  <link rel="stylesheet" href="chore_card.css">
-  <script src="https://kit.fontawesome.com/cd99b7ce8b.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <article id="card">
-    <div class="grid-container">
-      <div class="item1">
-        <img id='assignee' src="../chore_card/assignee_img.jpg"
-          alt="assignee">
-        <!--<i class="fa-solid fa-user-ninja" id="assignee"></i>-->
+<html>
+  <head>
+    <link rel="stylesheet" href="chore_card.css">
+    <script src="https://kit.fontawesome.com/cd99b7ce8b.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <article id="card">
+      <div class="grid-container">
+        <div class="item1">
+          <img id='assignee' src="../chore_card/assignee_img.jpg"
+            alt="assignee">
+          <!--<i class="fa-solid fa-user-ninja" id="assignee"></i>-->
+        </div>
+        <div class="item2">
+          <h3 class="name">Wash the Bedding</h3>
+        </div>
+        <div class="item3">
+          <h4 class="date">11/23/22</h4>
+        </div>
+        <div class="item4">
+          <span id="label">Bedroom</span>
+        </div>
+        <div class="item5">
+          <!--<i class="fa-regular fa-square" id="checkbox"></i>-->
+          <i class="fa-regular fa-square-check" id="checkbox"></i>
+        </div>
       </div>
-      <div class="item2">
-        <h3 class="name">Wash the Bedding</h3>
-      </div>
-      <div class="item3">
-        <h4 class="date">11/23/22</h4>
-      </div>
-      <div class="item4">
-        <span id="label">Bedroom</span>
-      </div>
-      <div class="item5">
-        <!--<i class="fa-regular fa-square" id="checkbox"></i>-->
-        <i class="fa-regular fa-square-check" id="checkbox"></i>
-      </div>
-    </div>
-  </article>
-</body>
+    </article>
+  </body>
+</html>
