--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -18,13 +18,13 @@
           <!--<i class="fa-solid fa-user-ninja" id="assignee"></i>-->
         </div>
         <div class="item2">
-          <h3 class="name">Wash the Bedding</h3>
+          <h3 class="name">${data.choreName}</h3>
         </div>
         <div class="item3">
-          <h4 class="date">11/23/22</h4>
+          <h4 class="date">${data.date}</h4>
         </div>
         <div class="item4">
-          <span id="label">Bedroom</span>
+          <span id="label">${data.section}</span>
         </div>
         <div class="item5">
           <!--<i class="fa-regular fa-square" id="checkbox"></i>-->
