--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -26,7 +26,7 @@
           <span id="label">${data.section}</span>
         </div>
         <div class="item5">
-          <i class="fa-regular fa-square-check" id="checkbox"></i>
+          <i class="fa-regular fa-square" id="checkbox"></i>
         </div>
       </div>
     </article>
