--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -6,15 +6,15 @@
 <!--template literal will be used to configured each individual chore card.-->
 <html>
   <head>
-    <link rel="stylesheet" href="chore_card.css">
+    <link rel="stylesheet" href="../chore_card/chore_card.css">
     <script src="https://kit.fontawesome.com/cd99b7ce8b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <article id="card">
       <div class="grid-container">
         <div class="item1">
-          <img id='assignee' src="../chore_card/assignee_img.jpg"
-            alt="assignee">
+          <img id='assignee' src="../chore_card/assignee_img.jpg" alt="assignee">
+          <figcaption>${data.assigneeSrc}</figcaption>
           <!--<i class="fa-solid fa-user-ninja" id="assignee"></i>-->
         </div>
         <div class="item2">
@@ -30,6 +30,7 @@
           <!--<i class="fa-regular fa-square" id="checkbox"></i>-->
           <i class="fa-regular fa-square-check" id="checkbox"></i>
         </div>
+        <div class="item6">${data.in}</div>
       </div>
     </article>
   </body>
