fix linter issues 5+ remove main_page.css since it's not used

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- link rel="stylesheet" href="main_page.css" -->
     <script src="https://kit.fontawesome.com/cd99b7ce8b.js" crossorigin="anonymous"></script>
     <title>Stonks Chore Tracker</title>
     <!-- Chore Card Custom Element -->
@@ -23,7 +22,7 @@
           <div class="title-box">
               <a class="header-title" href="#">Chore List</a>
           </div>
-          <div class="hamburg_menu" id="hamburg_menu">
+          <div class="hamburg-menu" id="hamburg_menu">
             <button type="button" id="drop-down" class="mydropdown-box">
               <i class="fa-solid fa-bars fa-2xl" id="openbtn"></i>
             </button>
