fix linter issues 6

--- a/source/index.html
+++ b/source/index.html
@@ -26,10 +26,10 @@
             <button type="button" id="drop-down" class="mydropdown-box">
               <i class="fa-solid fa-bars fa-2xl" id="openbtn"></i>
             </button>
-            <div class="menu_box" id="menu_box">
+            <div class="menu-box" id="menu_box">
               <div class="popup_arrow"></div>
               <p>Sort</p>
-              <div class="priority_container" id="priority_list">
+              <div class="priority-container" id="priority_list">
                 <button type="button" class="priority_button" id="due_date_btn">By due date</button>
                 <button type="button" class="priority_button" id="section_btn">By section</button>
                 <button type="button" class="priority_button" id="assignee_btn">By assignee</button>
