fix linter issues 8

--- a/source/index.html
+++ b/source/index.html
@@ -30,9 +30,9 @@
               <div class="popup_arrow"></div>
               <p>Sort</p>
               <div class="priority-container" id="priority_list">
-                <button type="button" class="priority_button" id="due_date_btn">By due date</button>
-                <button type="button" class="priority_button" id="section_btn">By section</button>
-                <button type="button" class="priority_button" id="assignee_btn">By assignee</button>
+                <button type="button" class="priority-button" id="due_date_btn">By due date</button>
+                <button type="button" class="priority-button" id="section_btn">By section</button>
+                <button type="button" class="priority-button" id="assignee_btn">By assignee</button>
               </div>   
             </div>           
           </div>
