--- a/source/index.html
+++ b/source/index.html
@@ -8,11 +8,11 @@
     <script src="https://kit.fontawesome.com/cd99b7ce8b.js" crossorigin="anonymous"></script>
     <title>Stonks Chore Tracker</title>
     <!-- Chore Card Custom Element -->
-    <script src="./chore_card/chore_card.js" type="module"></script>
+    <script src="./chore-card/chore-card.js" type="module"></script>
 
     <!-- Main Stylesheets & Scripts -->
     <link rel="stylesheet" href="./main_page/main.css">
-    <script src="./main_page/main.js" type="module"></script>
+    <script src="./main-page/main.js" type="module"></script>
   </head>
   
  <body>
@@ -22,41 +22,41 @@
           <div class="title-box">
               <a class="header-title" href="#">Chore List</a>
           </div>
-          <div class="hamburg-menu" id="hamburg_menu">
+          <div class="hamburg-menu" id="hamburg-menu">
             <button type="button" id="drop-down" class="mydropdown-box">
               <i class="fa-solid fa-bars fa-2xl" id="openbtn"></i>
             </button>
-            <div class="menu-box" id="menu_box">
-              <div class="popup_arrow"></div>
+            <div class="menu-box" id="menu-box">
+              <div class="popup-arrow"></div>
               <p>Sort</p>
-              <div class="priority-container" id="priority_list">
-                <button type="button" class="priority-button" id="due_date_btn">By due date</button>
-                <button type="button" class="priority-button" id="section_btn">By section</button>
-                <button type="button" class="priority-button" id="assignee_btn">By assignee</button>
+              <div class="priority-container" id="priority-list">
+                <button type="button" class="priority-button" id="due-date-btn">By due date</button>
+                <button type="button" class="priority-button" id="section-btn">By section</button>
+                <button type="button" class="priority-button" id="assignee-btn">By assignee</button>
               </div>   
             </div>           
           </div>
           
         </header>
-        <div class="main_page">
+        <div class="main-page">
           <main>
             <section id="chore-cards">
             </section>
-            <div class="info_modal">
-              <div class="info_box">
-                <a class="close_btn">&times;</a>
+            <div class="info-modal">
+              <div class="info-box">
+                <a class="close-btn">&times;</a>
                 <h2>Instruction</h2>
                 <p></p>
               </div>
             </div>
           </main>
           <div class="footer">
-            <div class="fab-container" data-modal="modal_form" id="add-chore">
+            <div class="fab-container" data-modal="modal-form" id="add-chore">
               <div class="button iconbutton">
                 <i class="fa-solid fa-plus"></i>
               </div>
             </div>
-            <div id="modal_form" class="modal">
+            <div id="modal-form" class="modal">
               <div class="modal-content">
                 <div class="add-chore-form">
                   <a class="close">&times;</a>
