--- a/source/index.html
+++ b/source/index.html
@@ -8,11 +8,11 @@
     <script src="https://kit.fontawesome.com/cd99b7ce8b.js" crossorigin="anonymous"></script>
     <title>Stonks Chore Tracker</title>
     <!-- Chore Card Custom Element -->
-    <script src="./chore-card/chore-card.js" type="module"></script>
+    <script src="./chore_card/chore_card.js" type="module"></script>
 
     <!-- Main Stylesheets & Scripts -->
     <link rel="stylesheet" href="./main_page/main.css">
-    <script src="./main-page/main.js" type="module"></script>
+    <script src="./main_page/main.js" type="module"></script>
   </head>
   
  <body>
