Added ids to main page add chore modal form

--- a/source/index.html
+++ b/source/index.html
@@ -63,10 +63,10 @@
                   <form id="form" action="/">
                     <h2>Add chore</h2>
                     <div>
-                      <input class="fname" type="text" name="choreName" placeholder="Chore name" />
-                      <input type="text" name="date" placeholder="11/01/2022 (mm/dd/yyyy)" />
-                      <input type="text" name="section" placeholder="location" />
-                      <input type="text" name="assigneeSrc" placeholder="assignee" />
+                      <input class="fname" id="chore-name" type="text" name="choreName" placeholder="Chore name" />
+                      <input type="text" id="chore-date" name="date" placeholder="11/01/2022 (mm/dd/yyyy)" />
+                      <input type="text" id="chore-location" name="section" placeholder="location" />
+                      <input type="text" id="chore-assignee" name="assigneeSrc" placeholder="assignee" />
                     </div>
                     <div>
                       <span>Instruction</span>
