add menu.css + changing units to relative

--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
 
     <!-- Main Stylesheets & Scripts -->
     <link rel="stylesheet" href="./main_page/main.css">
+    <link rel="stylesheet" href="./main_page/menu.css">
   </head>
   <script src="https://kit.fontawesome.com/cd99b7ce8b.js" crossorigin="anonymous"></script>
   <script src="./chore_card/chore_card.js" type="module"></script>
