changing to relative unit 1

--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
           </main>
           <div class="footer">
             <div class="fab-container" data-modal="modal-form" id="add-chore">
-              <div class="button iconbutton">
+              <div class="button">
                 <i class="fa-solid fa-plus"></i>
               </div>
             </div>
