fixing linting error done

--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -4,16 +4,15 @@
 <!--use grid for arrangment: assignee in first column; chorename, due data, and section in second column;
     check box in the third column. May turn the bar into a progression bar-->
 <!--template literal will be used to configured each individual chore card.-->
-<html>
   <head>
+    <title>Chore Card Template</title>
     <link rel="stylesheet" href="../chore_card/chore_card.css">
-    <script src="https://kit.fontawesome.com/cd99b7ce8b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <article id="card">
       <div class="grid-container">
         <div class="item1">
-          <img id='assignee' src="../chore_card/assignee_img.jpg"
+          <img id="assignee" src="../chore_card/assignee_img.jpg"
             alt="assignee">
         </div>
         <div class="item2">
