--- a/source/chore_card/chore_card.html
+++ b/source/chore_card/chore_card.html
@@ -19,7 +19,7 @@
           <h3 class="name">${data.choreName}</h3>
         </div>
         <div class="item3">
-          <h4 class="date">${data.date}</h4>
+          <h4 class="date">${data.assigneeSrc} ${data.date}</h4>
         </div>
         <div class="item4">
           <span id="label">${data.section}</span>
